--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
     <body>
-        <img id="stickFigure" src="media/left.png" alt="Still Stick Figure">
+        <img id="stickFigure" src="media/character-movement/left.png" alt="Still Stick Figure">
         
         <script  src="script/script.js"></script>
         
