change script file name - maybe stupid

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <img src="media/background/dungeon3.jpg" id="tilemap">
 
-    <script  src="script/tile-map.js"></script>
+    <script  src="script/script.js"></script>
 
 </body>
     
