--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div id="controls">
         <button id="debugButton">VIEW-GRID</button>
+        <button id="restartButton">RESTART</button>
     </div>
         
     <img id="playerSprite" src="media/character-movement/PlayerSprite.png" style="display: none;" />    
